update cards to be flex containers, CTA learn more margin-top: auto to ensure horizontial alignment.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -83,6 +83,7 @@ main {
     width: 88%;
     margin-top: 5rem;
     margin-bottom: 5rem;
+    min-width: 18rem; /* Will stop the cards from shrinking any further than approx 285px */
     max-width: 100rem;  
 }
 
@@ -92,13 +93,20 @@ main {
 }
 
 .flex-card {
+    display: flex;
+    flex-direction: column;
     padding: 2.5rem 3rem 3.5rem 3rem;
-    flex: 1 1;
+    flex: 1 1 0; /* All Cards have the same grow and shrink ratio, Flex-basis is 0 so that
+                    the initial size of each flex item is not a factor in how the available space is distributed. */
+}
+
+.logo-top-left-card {
+    max-width: 4rem;
 }
 
 .flexcard-sedan {
     background-color: hsl(31, 77%, 52%);
-    border-radius: 10px 10px 0px 0px;
+    border-radius: 10px 10px 0px 0px;    
 }
 
 .flexcard-suv {
@@ -120,7 +128,6 @@ main {
 }
 
 a {
-    display: inline-block;
     text-decoration: none;
 }
 
@@ -130,7 +137,9 @@ a {
    background-color: hsl(0, 0%, 95%);
    text-transform: capitalize;
    padding: 7px 26px 7px 26px;
-  /* margin-top: auto; */
+   max-width:9.08rem;
+   margin-top: auto; /* Using this in conjunction with a flex column / card ensures that
+                        all the buttons will align horizontially regardless of different content lengths in each card */   
 }
 
 .btn-lm-sedan{
@@ -163,14 +172,12 @@ a {
         padding: 2.5rem 0.2rem 3.5rem 3rem;
       }
 
-    .card-description-text {
-        width: 78%;
+    .flex-card p {
+        margin-bottom: 90px;
     }
 
-    .btn-learn-more {
-       margin-top: 60px;
-       /* margin-top: auto; */
-       /* margin-bottom: auto; */
+    .card-description-text {
+        width: 78%;
     }
 
     .flexcard-sedan {
